syntax = "proto3";

package auth;

message TokenRequest {
    string token = 1;
}

message TokenValidationResponse {
    bool valid = 1;
    string userId = 2;
    string email = 3;
    string role = 4;
}
message UserIdListRequest {
    repeated string usersIds = 1;
}

message User {
    string userId = 1;
    string username = 2;
    string firstName = 3;
    string lastName = 4;
}

service AuthSessionService {
    rpc ValidateToken(TokenRequest) returns (TokenValidationResponse);
    rpc GetUsersByIds(UserIdListRequest) returns (stream User);
}
